src/styles/global.css
:root {
  /*
  --font-sans: Helvetica, Arial, sans-serif;
  --font-serif: 'Times New Roman', Times, serif;
  */
  --font-serif: 'Times New Roman', Times, serif;
  --font-sans: Helvetica, Arial, sans-serif;

  --max-font-size: 100px;
  --min-font-size: 60px;
  --line-height: 1.05em;

  --max-width: 25em;
  --canvas-padding: 4.9rem;

  --font-size: 12vw;
  --font-size-serif: 1.05em;

  --background-color: rgb(197, 195, 195);
  --foreground-color: rgb(18, 17, 17);
  --secondary-foreground-color: rgb(0, 0, 255);
  --accent-color: rgb(68, 255, 0);

  /*
  --background-color: rgb(239, 235, 231);
  --foreground-color: rgb(26, 25, 25);
  --secondary-foreground-color: rgb(128, 122, 70);
  --accent-color: rgb(255, 0, 0);
  */
  --background-color: rgb(139, 139, 139);
  --foreground-color: rgb(3, 3, 3);
  --secondary-foreground-color: rgb(255, 255, 255);
  --accent-color: rgb(170, 255, 0);

  --shadow-color: var(--foreground-color);
  /*
  --accent-background-color: rgb(170, 255, 0);
  */
  --accent-background-color: var(--accent-color);

  --reset-color: rgb(255, 255, 255);

  --edge-padding: 0.2em;
}

html {
  font-size: var(--font-size);
  font-family: var(--font-sans);

  background-color: var(--background-color);
  color: var(--foreground-color);

  text-transform: uppercase;
  line-height: var(--line-height);
}

html,
*,
*::before,
*::after {
  box-sizing: border-box;
}

main {
  position: relative;
  padding: var(--edge-padding);
  z-index: 0;

  width: 100%;
  height: 100vh;

  overflow: hidden;
}

.step {
  transition: 0.1s;
  animation: background-flicker calc(var(--speed) * 0.3);
}

.active-line {
  height: 100%;
}

.emphasized {
  font-family: var(--font-serif);
  font-size: var(--font-size-serif);
  font-style: italic;
}

.correction {
  visibility: hidden;
}

.start {
  display: inline-block;
  width: 100%;
}

.resetting {
  background-color: var(--reset-color);
  color: var(--accent-background-color);

  --foreground-color: var(--accent-background-color);
}

.dog {
  /*
  background-color: var(--foreground-color);
  color: var(--background-color);
  */
  text-shadow:
    0.01em 0.01em 0.04em var(--foreground-color),
    -0.01em -0.01em 0.04em var(--foreground-color);

  filter: blur(0.005em);
}

.line {
  filter: blur(0.02em);
}

.active-line {
  filter: blur(0.007em);
}

.progress {
  position: absolute;
  top: 0;
  left: 0;
  width: 3px;
  height: 100vh;
  background-color: var(--accent-color);

  left: calc(var(--progress) * 100%);

  animation: progress-flicker calc(var(--speed) * 0.1) infinite alternate;
}

.progress.animate {
  transition: var(--speed) ease-out;
}

.poem-scroller {
  position: absolute;
  right: 0;
  top: 0;
  height: 100vh;
  overflow: auto;

  text-align: left;

  font-size: 0.1em;

  --foreground-color: var(--secondary-foreground-color);
  color: var(--foreground-color);

  z-index: -1;

  line-height: 1.25em;
  padding: var(--edge-padding);
}

.poem-scroller .line.active {
  --foreground-color: var(--accent-color);
  color: var(--foreground-color);
}

.sphere {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);

  width: 25vw;
  height: 25vw;

  border-radius: 100%;

  /*
  background-color: var(--secondary-foreground-color);
  */
  background-color: var(--accent-color);

  z-index: -4;

  filter: blur(0.025em);
}

@keyframes progress-flicker {
  from {
    filter: blur(0.005em);
  }
  to {
    filter: blur(0.015em);
  }
}

@keyframes background-flicker {
  0% {
    background-color: var(--background-color);
  }
  25% {
    background-color: var(--accent-background-color);
  }
  100% {
    background-color: var(--background-color);
  }
}

